--- a/fetch/picsum.css
+++ b/fetch/picsum.css
@@ -21,9 +21,9 @@
     text-align: center;
 }
 
-h1 {
+header {
     text-align: center;
-    margin-bottom: 8vh;
+    margin-bottom: 6vh;
 }
 
 main {
@@ -31,6 +31,10 @@ main {
     grid-template-columns: 1fr 1fr;
     align-content: center;
     gap: 2em;
+}
+
+h1 {
+    margin-bottom: 4vh;
 }
 
 /* img {
