added picsum_alt.js - in progress

--- a/fetch/picsum.css
+++ b/fetch/picsum.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+.hidden {
+    display: none;
+}
+
 .full-container {
     min-height: 100vh;
     padding: 4vh 4vw;
